# device_framework

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  Virtio 1.2 Guest Driver (C++23 Header-only) 架构设计.md  重构计划.md
.github/: copilot-instructions.md
cmake/: riscv64-toolchain.cmake
docs/: architecture_design.md
include/: blk_request.hpp  defs.h  expected.hpp  platform.h
include/device/: device_initializer.hpp  virtio_blk.hpp
include/device_framework/: acpi.hpp  defs.h  expected.hpp  ns16550a.hpp  pl011.hpp  traits.hpp  virtio_blk.hpp
include/device_framework/detail/: mmio_accessor.hpp  uart_device.hpp
include/device_framework/detail/acpi/: acpi.hpp
include/device_framework/detail/ns16550a/: ns16550a.hpp  ns16550a_device.hpp
include/device_framework/detail/pl011/: pl011.hpp  pl011_device.hpp
include/device_framework/detail/virtio/: defs.h  traits.hpp
include/device_framework/detail/virtio/device/: device_initializer.hpp  virtio_blk.hpp  virtio_blk_defs.h  virtio_blk_device.hpp  virtio_console.h  virtio_gpu.h  virtio_input.h  virtio_net.h
include/device_framework/detail/virtio/transport/: mmio.hpp  pci.hpp  transport.hpp
include/device_framework/detail/virtio/virt_queue/: misc.hpp  split.hpp  virtqueue_base.hpp
include/device_framework/driver/: uart_device.hpp
include/device_framework/driver/acpi/: acpi.hpp
include/device_framework/driver/ns16550a/: ns16550a.hpp  ns16550a_device.hpp
include/device_framework/driver/pl011/: pl011.hpp  pl011_device.hpp
include/device_framework/driver/virtio/: defs.h  traits.hpp
include/device_framework/driver/virtio/device/: device_initializer.hpp  virtio_blk.hpp  virtio_blk_defs.h  virtio_blk_device.hpp
include/device_framework/driver/virtio/transport/: mmio.hpp  pci.hpp  transport.hpp
include/device_framework/driver/virtio/virt_queue/: misc.hpp  split.hpp  virtqueue_base.hpp
include/device_framework/ops/: block_device.hpp  char_device.hpp  device_ops_base.hpp
include/transport/: mmio.hpp  pci.hpp  transport.hpp
include/virt_queue/: misc.hpp  split.hpp
include/virtio_driver/: defs.h  expected.hpp  platform.h  traits.hpp
include/virtio_driver/device/: device_initializer.hpp  virtio_blk.hpp  virtio_net.h
include/virtio_driver/transport/: mmio.hpp  pci.hpp  transport.hpp
include/virtio_driver/virt_queue/: misc.hpp  split.hpp  virtqueue_base.hpp
src/: CMakeLists.txt
src/block/: blk_request_example.cpp
src/include/: blk_request.hpp  defs.h  expected.hpp  platform.h  virtio_blk.h  virtio_blk.hpp
src/include/transport/: mmio.hpp  pci.hpp  transport.hpp
src/include/virt_queue/: misc.hpp  split.hpp
src/include/virtio/: defs.h  types.h
test/: CMakeLists.txt  boot.S  link.ld  main.cpp  mmio_test.cpp  ns16550a_test.cpp  platform_impl.h  plic.h  test.cpp  test.h  test_env.cpp  test_env.h  trap.cpp  uart.cpp  uart.h  virtio_blk_device_test.cpp  virtio_blk_test.cpp
tests/: CMakeLists.txt  README.md  boot.S  link.ld  macro.S  main.cpp  trap.cpp  uart.cpp  uart.h  virtio_blk_test.cpp  virtio_blk_test.h  virtio_mmio_probe.cpp  virtio_mmio_probe.h
